# mtasa_txbuild

./: .gitignore  README.md  commands.mak  config.mak  generic.mak  helpers.mak  loader.lua  main.mak  preprocess.lua  utils.mak
.github/workflows/: ci.yml
src/: CMakeLists.txt  config.cmd  premake4.lua
src/addutf8bom/: CMakeLists.txt  main.c  premake4.lua
src/tinyxml/: CMakeLists.txt  premake4.lua
src/txbuild/: CException.h  CMakeLists.txt  CMakefile.cpp  CMakefile.h  CMetaFile.cpp  CMetaFile.h  CPath.h  CProject.cpp  CProject.h  SBuildOptions.h  main.cpp  premake4.lua
src/txprotect/: CMakeLists.txt  main.cpp  premake4.lua
src/txstrlist/: CMakeLists.txt  main.cpp  premake4.lua
